# bookmarks

./: pyproject.toml
bookmarks/: cert.crt  cert.key
bookmarks/account/: authentication.py  forms.py  models.py  urls.py  views.py
bookmarks/account/migrations/: 0001_initial.py  0002_contact.py
bookmarks/account/templates/: base.html
bookmarks/account/templates/account/: dashboard.html  login.html
bookmarks/account/templates/account/user/: detail.html  list.html
bookmarks/account/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
bookmarks/actions/: utils.py
bookmarks/actions/migrations/: 0001_initial.py
bookmarks/actions/templates/actions/action/: detail.html
bookmarks/bookmarks/: settings.py
bookmarks/images/: admin.py  forms.py  models.py  views.py
bookmarks/images/migrations/: 0001_initial.py  0002_alter_image_options_image_total_likes_and_more.py
bookmarks/images/static/js/: bookmarklet.js
bookmarks/images/templates/images/image/: detail.html  list_images.html  ranking.html
bookmarks/static/css/: base.css
